--- a/newhacks.html
+++ b/newhacks.html
@@ -253,7 +253,7 @@
             method: 'POST',
             headers: { 
                 'Content-Type': 'application/json',
-                'Authorization': "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", // Add your actual API key
+                'Authorization': "Bearer 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", 
                 'HTTP-Referer': window.location.origin,
                 'X-Title': 'Study Schedule Assistant'
             },
