--- a/schedule.html
+++ b/schedule.html
@@ -22,7 +22,7 @@
         
         body {
             font-family: 'Inter', sans-serif;
-            background-color: #f1f5f9; /* slate-100 */
+            background-color: #afefd7; /* slate-100 */
         }
 
         /* The main card holding the schedule */
