--- a/schedule.html
+++ b/schedule.html
@@ -132,7 +132,7 @@
             <p class="text-center text-gray-500">Loading your schedule...</p>
         </div>
         
-        <a href="index.html" class="btn-back">← Create a New Schedule</a>
+        <a href="newhacks.html" class="btn-back">← Create a New Schedule</a>
     </div>
 
     <script>
