--- a/newhacks.html
+++ b/newhacks.html
@@ -253,7 +253,7 @@
             method: 'POST',
             headers: { 
                 'Content-Type': 'application/json',
-                'Authorization': "Bearer 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", 
+                'Authorization': "Bearer" + API_KEY, 
                 'HTTP-Referer': window.location.origin,
                 'X-Title': 'Study Schedule Assistant'
             },
