--- a/newhacks.html
+++ b/newhacks.html
@@ -249,11 +249,10 @@
     };
 
     try {
-        const response = await fetch("https://openrouter.ai/api/v1/chat/completions", {
+        const response = await fetch(PROXY_API_URL, {
             method: 'POST',
             headers: { 
                 'Content-Type': 'application/json',
-                'Authorization': "Bearer" + API_KEY, 
                 'HTTP-Referer': window.location.origin,
                 'X-Title': 'Study Schedule Assistant'
             },
